--- a/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/parts/partstack.css
+++ b/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/parts/partstack.css
@@ -126,31 +126,11 @@
     border-left-color: transparent;
 }
 
-
-.selectEditorTab {
-    background: #4D7191 !important;
-}
-
-.activeTabTextColor {
-    color: #dbdbdb !important;
-}
-
-.opacity {
-    opacity: 1 !important;
-}
-
-.unSelectEditorBorder {
-}
-
 .listItemPanel {
-    border-left: 1px solid #353535;
-    border-right: 1px solid #353535;
-    border-bottom: 1px solid #353535;
-    background: #5A5C5C;
-}
-
-.listShownButtonBackground {
-    background: #5A5C5C !important;
+    background-color: openedFilesDropdownListBackgroundColor;
+    border: 1px solid openedFilesDropdownListBorderColor;
+    box-shadow: 0px 2px 2px 0px openedFilesDropdownListShadowColor;
+    border-radius: 0px 0px 3px 3px;
 }
 
 .ide-PartStack-Content {
@@ -163,7 +143,7 @@
     border-bottom: 1px solid transparent;
 }
 
-.ide-PartStack-Content div[role="part"][active] div[role="toolbar"] div[role="toolbar-header"] {
+.ide-PartStack-Content div[role="part"][focused] div[role="toolbar"] div[role="toolbar-header"] {
     border-bottom-color: tabUnderlineColor;
 }
 
@@ -182,8 +162,8 @@
 
 .ide-Base-Part-Toolbar {
     background-color: partToolbar;
-    border-bottom: 1px solid tabBorder;
-    font-size: 9.5px;
+    border-bottom: 1px solid tabBorderColor;
+    font-size: 11px;
     color: mainFontColor;
 }
 
