--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/notification/notification.css
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/notification/notification.css
@@ -118,7 +118,7 @@
     margin-top: 3px;
     margin-left: 3px;
     padding: 0px 3px;
-    color: tabBorder;
+    color: tabBorderColor;
     background-color: mainFontColor;
     line-height: 11px;
     vertical-align: middle;
