--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/projecttype/wizard/categoriespage/MainPage.css
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/projecttype/wizard/categoriespage/MainPage.css
@@ -72,10 +72,7 @@
 
 .categories {
     margin: 0px 25px 1px 0px;
-    border-top: 1px solid #000000;
-    border-left: 1px solid #000000;
-    border-right: 1px solid #000000;
-    box-shadow: 0px 1px 0px borderColor;
+    border: 1px solid #000000;
     background-color: #313131;
 }
 
