--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/list/CategoriesList.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/list/CategoriesList.css
@@ -9,33 +9,32 @@
  *   Codenvy, S.A. - initial API and implementation
  *******************************************************************************/
 @def menuListBorderPx 1px;
-@def listItemTopPadding 2px;
-@def listItemBottomPadding 2px;
-@def listItemLeftPadding 16px;
+@def listHeaderLeftPadding 10px;
+@def listHeaderRightPadding 5px;
+@def listItemLeftPadding 24px;
 @def listItemRightPadding 44px;
 
 .listBase {
-    background: dialogContentBackground;
     outline: none;
     white-space: nowrap;
+    background: dialogContentBackground;
 }
 
 .listContainer {
+    height: 100%;
     overflow-y: auto;
     overflow-x: hidden;
-    background-color: consolePanelColor;
+    font-size: textFieldFontSize;
+    font-family: textFieldFontFamily;
+    background-color: categoriesListItemBackgroundColor;
 }
 
 .categoryItem {
-    padding: listItemTopPadding listItemRightPadding listItemBottomPadding listItemLeftPadding;
-    color: mainMenuFontColor;
-    font-size: 11px;
+    padding: 0 listItemRightPadding 0 listItemLeftPadding;
+    color: categoriesListItemTextColor;
     cursor: default;
     margin: 0;
-
-    -moz-transition: background 0.130s;
-    -webkit-transition: background 0.130s;
-    transition: background 0.130s;
+    transition: background 0.1s;
 }
 
 /* For tables, the <tr> (which would be the listItem) cannot have padding */
@@ -45,33 +44,22 @@
 }
 
 .categoryItem > td:first-child {
-    padding-left: 0px;
+    padding-left: 0;
 }
 
 .categoryItem > td:last-child {
     padding-right: listItemLeftPadding;
 }
 
-.categoryItem[selected], .categoryItem:hover {
-    color: mainMenuFontColor;
-
-    -moz-transition: background 0s;
-    -webkit-transition: background 0s;
-    transition: background 0s;
-}
-
 .categoryItem[selected] {
-
     background-color: selectionBackground;
 }
 
-.categoryItem:hover {
-    /*background-color: hoverBackgroundColor;*/
-}
-
 .category {
+    display: inline;
     line-height: 12px;
-    margin-right: 1px;
+    color: categoriesListItemTextColor;
+    background-color: categoriesListItemBackgroundColor;
 }
 
 .categoryLabel {
@@ -86,45 +74,48 @@
 
 .expandControl {
     float: right;
-    transition: all 300ms;
     width: 15px;
     height: 15px;
-    margin-top: 5px;
-    margin-right: 1px;
+    transition: all 200ms;
+    display: inline-block;
+    line-height: 15px;
+    text-align: center;
+    margin: 1px;
 }
 
 .expandControl svg {
-    fill: wizardIconColor;
-    transform: scaleX(0.5);
-    -webkit-transform: scaleX(0.5));
+    display: inline-block;
+    fill: categoriesListHeaderIconColor;
+    height: 8px;
+    width: 8px;
 }
 
 .categoryHeader {
-    height: 22px;
-    background-color: partBackground;
-    border-bottom: 1px solid #2b2b2b;
+    height: 18px;
+    line-height: 18px;
+    text-transform: capitalize;
+    color: categoriesListHeaderTextColor;
+    background-color: categoriesListHeaderBackgroundColor;
+    padding: 0 listHeaderRightPadding 0 listHeaderLeftPadding;
 }
 
 .expandedImage {
     transform: rotate(90deg);
-    -webkit-transform: rotate(90deg);
-    margin-right: 3px
 }
 
 .headerIcon {
-    width: 17px;
-    height: 17px;
-    margin-right: 4px;
-    margin-top: 2px;
     float: left;
+    width: 15px;
+    height: 15px;
+    margin-top: 1px;
+    margin-right: 5px;
 }
 
 .headerText {
     float: left;
-    margin-top: 5px;
     white-space: nowrap;
 }
 
 svg.headerIcon {
-    fill: wizardIconColor;
+    fill: categoriesListHeaderIconColor;
 }
