--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/projectimport/ImporterPage.css
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/projectimport/ImporterPage.css
@@ -8,6 +8,7 @@
  * Contributors:
  *   Codenvy, S.A. - initial API and implementation
  *******************************************************************************/
+@external .inputError;
 
 .mainPanel {
     margin-top: 5px;
@@ -89,4 +90,7 @@
 
 .namePanel .labelPosition {
     display: block;
+}
+
+.inputError {
 }
