--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/projecttype/wizard/categoriespage/MainPage.css
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/projecttype/wizard/categoriespage/MainPage.css
@@ -8,6 +8,7 @@
  * Contributors:
  *   Codenvy, S.A. - initial API and implementation
  *******************************************************************************/
+@external .inputError;
 
 .mainPanel {
     margin: 0;
@@ -107,4 +108,7 @@ div.horizontalLine {
     margin-top: -2px;
     pointer-events: none; /* do not allow SVG element to intercept pointer events */
     fill: mainFontColor;
+}
+
+.inputError {
 }
