--- a/commons/che-core-commons-gwt/src/main/resources/org/eclipse/che/ide/ui/list/SimpleList.css
+++ b/commons/che-core-commons-gwt/src/main/resources/org/eclipse/che/ide/ui/list/SimpleList.css
@@ -15,7 +15,8 @@
 @def listItemRightPadding 44px;
 
 .listBase {
-    background: dialogContentBackground;
+    background: textFieldBackgroundColor;
+    border: 1px solid textFieldBorderColor;
     outline: none;
     white-space: nowrap;
 }
@@ -27,14 +28,11 @@
 
 .listItem {
     padding: listItemTopPadding listItemRightPadding listItemBottomPadding listItemLeftPadding;
-    color: mainMenuFontColor;
-    font-size: 13px;
+    color: textFieldColor;
+    font-size: textFieldFontSize;
+    font-family: textFieldFontFamily;
     cursor: default;
     margin: 0;
-
-    -moz-transition: background 0.130s;
-    -webkit-transition: background 0.130s;
-    transition: background 0.130s;
 }
 
     /* For tables, the <tr> (which would be the listItem) cannot have padding */
@@ -64,5 +62,7 @@
 }
 
 .listItem:hover {
-    /*background-color: hoverBackgroundColor;*/
+    filter: brightness(130%);
+    -webkit-filter: brightness(130%);
+    cursor: pointer;
 }
