IDEX-3158: create new command wizard

--- a/commons/che-core-commons-gwt/src/main/resources/org/eclipse/che/ide/ui/listbox/ListBox.css
+++ b/commons/che-core-commons-gwt/src/main/resources/org/eclipse/che/ide/ui/listbox/ListBox.css
@@ -84,7 +84,9 @@
     display: none;
     z-index: 9999998;
     line-height: 22px;
+    white-space: normal;
     position: absolute;
+    text-align: left;
     top: 100%;
     left: -1px;
     right: -1px;
