--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/toolbar/toolbar.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/toolbar/toolbar.css
@@ -15,7 +15,7 @@
     width: 100%;
     height: 100%;
     cursor: default;
-    overflow: hidden;
+    overflow: visible;
     text-align: center;
     box-sizing: border-box;
     border-top: 1px solid tabBorderColor;
@@ -120,7 +120,7 @@
 .toolbarPanel .iconButtonPanelSelectedDown {
     width: 18px;
     height: 18px;
-    overflow: hidden;
+    overflow: visible;
     text-align: center;
 }
 
@@ -137,7 +137,7 @@
 }
 
 .tooltip {
-    display: none;
+   display: none;
 }
 
 .iconButtonPanel:hover .tooltip,
@@ -161,8 +161,9 @@
     border-radius: 0;
     -moz-border-radius: 0;
     -webkit-border-radius: 0;
-    top: -13px;
+    top: -17px;
     margin: inherit;
+    line-height: initial;
 }
 
 .iconButtonPanel:hover .tooltipArrow,
@@ -175,7 +176,8 @@
     border-width: 9px;
     border-style: solid;
     border-color: transparent transparent #232323 transparent;
-    top: -11px;
+    top: -16px;
+    float:left;
     margin: inherit;
 }
 
